[tool.poetry]
name = "top-games-size"
version = "0.1.0"
description = "Get the storage size required for backups of the top games for various platforms"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
igdb-api-v4 = "^0.3.2"
rapidfuzz = "^3.7.0"
python-dotenv = "^1.0.1"
humanize = "^4.9.0"
numpy = "^1.26.4"
joblib = "^1.4.0"
random-user-agent = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
